=================================
Changes for Crate Admin Interface
=================================

Unreleased
==========

2015/04/09 0.11.5
=================

  - fix: concurrent ajax requests caused partition information
    in table detail view to be mixed up between tables

2015/03/05 0.11.4
=================

 - fix: calculate health for each partition of a partitioned table
   based on the number of shards of that partition

2015/02/04 0.11.3
=================

 - fixed bug that showed custom schemas in the table list
   as often as the amount of tables in that custom schema

2015/01/15 0.11.2
=================

 - removed usage of sys expressions in wrong context

 - fixed a template rendering issue in cluster view in Safari

 - de-register watches to decrease DOM updates and improve performance in cluster view

2014/12/19 0.11.1
=================

 - fixed title of `tables` view if no tables exists or connection is down

2014/12/16 0.11.0
=================

 - add support for tables with user defined schemas

 - added `Intercom <https://www.intercom.io>`_ integration
     Intercom allows you to ask questions and send messages to the Crate
     team directly from the admin interface. Click on the help button
     in the menu bar to enable personal support.
     Click on the icon in the bottom right corner to start writing your questions!

2014/11/17 0.10.2
=================

 - fixed issue that caused clunky scrolling with trackpad
   in Safari that mainly occured when having a narrow browser width

2014/11/14 0.10.1
=================

 - made console placeholder text darker so you can distinguish better
   between placeholder text and actually written statement

 - fixed 'Execute Query' button in console view

2014/11/06 0.10.0
=================

 - added hint to console: press shift+enter to submit query

 - fix: UI showed partitions from wrong table after switching between tables