@@ -29,9 +29,9 @@
         <div class="col-md-12 col-sm-11">
           <div class="panel panel-info text-right">
             <div class="panel-heading">
-              <p class="announcement-heading" ng-show="node"><a rel="tooltip" data-original-title="{{ node.address }}" ng-href="{{ node.address }}/admin/" target="_blank">{{ node.address }}</a></p>
-              <p class="announcement-heading" ng-hide="node.address">--</p>
-              <p class="announcement-text">Address</p>
+              <p class="announcement-heading" ng-show="node"><a rel="tooltip" data-original-title="{{ node.rest_url }}" ng-href="{{ node.rest_url }}/admin/" target="_blank">{{ node.rest_url }}</a></p>
+              <p class="announcement-heading" ng-hide="node.rest_url">--</p>
+              <p class="announcement-text">REST URL</p>
             </div>
           </div>
         </div>
