@@ -5,6 +5,8 @@ Changes for Crate Admin Interface
 Unreleased
 ==========
 
+  - display ``rest_url`` from sys.nodes table on node detail view
+
 2015/04/09 0.11.5
 =================
 
